# fc-admin

admin/: Makefile.am
admin/css/: profile.livesession.css
admin/fleetcommander/: admin.py  adminhostcheck.py  fcdbus.py  libvirtcontroller.py
admin/js/: profiles.livesession.js
admin/templates/: profiles.livesession.html
cockpit/: index.html
cockpit/js/: fcdbusclient.js  index.js  livesession.js
tests/: 04_libvirt_controller.py  _05_fcdbus_tests.py  _07_admin_tests.py
tests/data/: libvirt_domain-modified.xml
tests/tools/: ssh
