fc_admin_pydir = ${fcpythondir}/fleetcommander
fc_admin_py_SCRIPTS = \
	fleetcommander/__init__.py   \
	fleetcommander/admin.py      \
	fleetcommander/collectors.py \
	fleetcommander/database.py \
	fleetcommander/fcdbus.py            \
	fleetcommander/flaskless.py \
	fleetcommander/libvirtcontroller.py \
	fleetcommander/utils.py

fc_admin_constsdir = ${fcpythondir}/fleetcommander
fc_admin_consts_in_files = fleetcommander/constants.py.in
fc_admin_consts_DATA = fleetcommander/constants.py

fc_admin_wsgidir = ${libexecdir}
fc_admin_wsgi_SCRIPTS = \
	admin.wsgi

fc_jsdir   = ${fcdatastaticdir}/js
fc_js_DATA = \
		$(wildcard js/*.js)

fc_spicewebclientdir = ${fcdatastaticdir}/js/spice-web-client/
fc_spicewebclient_DATA = \
	js/spice-web-client/index.html \
	js/spice-web-client/run.js


fc_spicewebclientlibdir = ${fcdatastaticdir}/js/spice-web-client/lib
fc_spicewebclientlib_DATA = \
	js/spice-web-client/lib/modernizr.js \
	js/spice-web-client/lib/jquery-2.0.3.js \
	js/spice-web-client/lib/jquery-mousewheel.js \
	js/spice-web-client/lib/jgestures.min.js \
	js/spice-web-client/lib/pixastic.js \
	js/spice-web-client/lib/base64.js \
	js/spice-web-client/lib/biginteger.js \
	js/spice-web-client/lib/virtualjoystick.js \
	js/spice-web-client/lib/prettyprint.js \
	js/spice-web-client/lib/jsbn.js \
	js/spice-web-client/lib/jsbn2.js \
	js/spice-web-client/lib/prng4.js \
	js/spice-web-client/lib/rng.js \
	js/spice-web-client/lib/sha1.js \
	js/spice-web-client/lib/encrypt.js \
	js/spice-web-client/lib/bowser.js \
	js/spice-web-client/lib/utils.js \
	js/spice-web-client/lib/flipper.js \
	js/spice-web-client/lib/CollisionDetector.js \
	js/spice-web-client/lib/GlobalPool.js \
	js/spice-web-client/lib/GenericObjectPool.js \
	js/spice-web-client/lib/AsyncConsumer.js \
	js/spice-web-client/lib/AsyncWorker.js \
	js/spice-web-client/lib/PacketWorkerIdentifier.js \
	js/spice-web-client/lib/graphicdebug.js \
	js/spice-web-client/lib/runqueue.js \
	js/spice-web-client/lib/graphic.js \
	js/spice-web-client/lib/queue.js \
	js/spice-web-client/lib/ImageUncompressor.js \
	js/spice-web-client/lib/SyncAsyncHandler.js \
	js/spice-web-client/lib/IntegrationBenchmark.js \
	js/spice-web-client/lib/stuckkeyshandler.js \
	js/spice-web-client/lib/timelapsedetector.js \
	js/spice-web-client/lib/displayRouter.js \
	js/spice-web-client/lib/rasterEngine.js \
	js/spice-web-client/lib/DataLogger.js

fc_spicewebclientlibimagesdir = ${fcdatastaticdir}/js/spice-web-client/lib/images
fc_spicewebclientlibimages_DATA = \
	js/spice-web-client/lib/images/lz.js \
	js/spice-web-client/lib/images/bitmap.js \
	js/spice-web-client/lib/images/png.js

fc_spicewebclientnetworkdir = ${fcdatastaticdir}/js/spice-web-client/network
fc_spicewebclientnetwork_DATA = \
	js/spice-web-client/network/socket.js \
	js/spice-web-client/network/clusternodechooser.js \
	js/spice-web-client/network/socketqueue.js \
	js/spice-web-client/network/packetcontroller.js \
	js/spice-web-client/network/packetextractor.js \
	js/spice-web-client/network/packetreassembler.js \
	js/spice-web-client/network/reassemblerfactory.js \
	js/spice-web-client/network/sizedefiner.js \
	js/spice-web-client/network/packetlinkfactory.js \
	js/spice-web-client/network/spicechannel.js \
	js/spice-web-client/network/busconnection.js \
	js/spice-web-client/network/websocketwrapper.js \
	js/spice-web-client/network/connectioncontrol.js

fc_spicewebclientapplicationdir = ${fcdatastaticdir}/js/spice-web-client/application
fc_spicewebclientapplication_DATA = \
	js/spice-web-client/application/agent.js \
	js/spice-web-client/application/spiceconnection.js \
	js/spice-web-client/application/clientgui.js \
	js/spice-web-client/application/packetprocess.js \
	js/spice-web-client/application/packetfilter.js \
	js/spice-web-client/application/packetfactory.js \
	js/spice-web-client/application/application.js \
	js/spice-web-client/application/virtualmouse.js \
	js/spice-web-client/application/imagecache.js \
	js/spice-web-client/application/rasteroperation.js \
	js/spice-web-client/application/stream.js \
	js/spice-web-client/application/inputmanager.js \
	js/spice-web-client/application/WorkerProcess.js

fc_spicewebclientprocessdir = ${fcdatastaticdir}/js/spice-web-client/process
fc_spicewebclientprocess_DATA = \
	js/spice-web-client/process/busprocess.js \
	js/spice-web-client/process/displayprocess.js \
	js/spice-web-client/process/displaypreprocess.js \
	js/spice-web-client/process/inputprocess.js \
	js/spice-web-client/process/cursorprocess.js \
	js/spice-web-client/process/playbackprocess.js \
	js/spice-web-client/process/mainprocess.js

fc_spicewebclientkeymapsdir = ${fcdatastaticdir}/js/spice-web-client/keymaps
fc_spicewebclientkeymaps_DATA = \
	js/spice-web-client/keymaps/keymapes.js \
	js/spice-web-client/keymaps/keymapit.js \
	js/spice-web-client/keymaps/keymapus.js \
	js/spice-web-client/keymaps/keymap.js

fc_spicewebclientspiceobjectsdir = ${fcdatastaticdir}/js/spice-web-client/spiceobjects
fc_spicewebclientspiceobjects_DATA = \
	js/spice-web-client/spiceobjects/spiceobjects.js

fc_spicewebclientspiceobjectsgenerateddir = ${fcdatastaticdir}/js/spice-web-client/spiceobjects/generated
fc_spicewebclientspiceobjectsgenerated_DATA = \
	js/spice-web-client/spiceobjects/generated/protocol.js

fc_spicewebclientswcanvasdir = ${fcdatastaticdir}/js/spice-web-client/swcanvas
fc_spicewebclientswcanvas_DATA = \
	js/spice-web-client/swcanvas/swcanvas.js


fc_imgdir = ${fcdatastaticdir}/img
fc_img_DATA = \
	      $(wildcard img/*.png) \
	      $(wildcard img/*.img) \
     	      $(wildcard img/*.gif) \
      	      $(wildcard img/*.ico) \
     	      $(wildcard img/*.svg)

fc_tmpldir = ${fcdatatemplatesdir}
fc_tmpl_DATA = $(wildcard templates/*.html)

fc_cssdir = ${fcdatastaticdir}/css
fc_css_DATA = $(wildcard css/*.css)

EXTRA_DIST = \
	     $(fc_admin_py_SCRIPTS) \
	     $(fc_admin_wsgi_SCRIPTS) \
	     $(fc_js_DATA) \
	     $(fc_spicewebclient_DATA) \
	     $(fc_spicewebclientlib_DATA) \
	     $(fc_spicewebclientlibimages_DATA) \
	     $(fc_spicewebclientnetwork_DATA) \
	     $(fc_spicewebclientapplication_DATA) \
	     $(fc_spicewebclientprocess_DATA) \
	     $(fc_spicewebclientkeymaps_DATA) \
	     $(fc_spicewebclientspiceobjects_DATA) \
	     $(fc_spicewebclientspiceobjectsgenerated_DATA) \
	     $(fc_spicewebclientswcanvas_DATA) \
	     $(fc_img_DATA) \
	     $(fc_tmpl_DATA) \
	     $(fc_css_DATA)                  \
	     $(fc_admin_consts_in_files)

CLEANFILESM = \
	$(fc_admin_consts_DATA)
